--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
+aniso8601==8.0.0
 APScheduler==3.6.3
 certifi==2020.4.5.2
 chardet==3.0.4
+click==7.1.2
+Flask==1.1.2
+Flask-RESTful==0.3.8
 idna==2.9
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
 python-crontab==2.5.1
 python-dateutil==2.8.1
+python-dotenv==0.14.0
 pytz==2020.1
 requests==2.24.0
 six==1.15.0
 tzlocal==2.1
 urllib3==1.25.9
-python-dotenv==0.14.0
+Werkzeug==1.0.1
